# dig-eco

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  changelog.md  classifier2.js  mrds_gee_map.js  pyproject.toml  test1.js
Phase I/: README.txt
Phase I/data/processed/: anomaly_flags_part_0.csv  mrds_mine_disturbance_long_part_0_of_4_1984_2025_clean.csv  mrds_mine_disturbance_long_part_0_of_4_1984_2025_trend_summary.csv
Phase I/data/raw/: mrds_mine_disturbance_long_part_0_of_4_1984_2025.csv
Phase I/gee_scripts/: mrds_gee_map.js  mrds_mine_disturbance_timeseries.js  mrds_mine_disturbance_timeseries_fast.js
Phase I/outputs/figures/mrds_trends_part_0/: manifest.csv
Phase I/outputs/gee_csv_examples/: Divisadero_Mine_2013_2025.csv  Divisadero_Mine_2013_2025_clean.csv  Divisadero_Mine_2013_2025_trend_summary.csv  Laguna_Alegria_2013_2014_tc.csv  Laguna_Alegria_2013_2025.csv
Phase I/supporting_info/reports/: reports_el_porvenir_mine_profile.txt  reports_hormiguero_mine_profile.txt  reports_monte_mayor_mine_profile.txt
Phase I/supporting_info/tools/: mrds_plot_png.py  mrds_trends.py
analysis/: mrds_plot_png.py
docs/: contributing.md  data_sources.md  project_overview.md  reports_divisadero_mine_profile.txt
docs/literature/: README.md
docs/methodology/: asm_detection.md  future_modules.md  turbidity_analysis.md
gee/asm/: classifier1.js  utils.js
gee/groundwork/: GEEstarter.js  MDRS_health.js  mrds_mine_disturbance_timeseries.js
gee/shared/: masking_indices.js
gee/turbidity/: turb.js  turb_utils.js
tests/: test_smoke.py
(+112 files in other folders)
